--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ and work on real-world projects.
 
 <section>
   <center>
-  <h2>Contact:</h2>
+  <h2>Contact:  6385222106</h2>
   <h3>Address:213/1b,perumal kovil street ,sirupooluvapatti,15 velampalayam ring road ,tiruppur-641603</h3>
   <p style="text-align:center">Email: gnanakannank80@gmail.com</p>
   </center>
@@ -255,5 +255,6 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
