--- a/index.html
+++ b/index.html
@@ -126,11 +126,21 @@
     <img src="gnana.jpeg" alt="My Photo" class="profile-img">
     <h1>Hi, I'm Gnanakannan 👋</h1>
     <p>Web Developer | Java Learner | Student</p>
-    <a href="#projects" class="btn">View My Work</a>
+    <a href="#home" class="btn">Home</a>
+<a href="#area-of-interest" class="btn">Area of Interest</a>
+<a href="#skills" class="btn"> Tech Skills</a>
+<a href="#projects" class="btn">Projects</a>
+<a href="#achievements" class="btn">Achievements</a>
+<a href="#education-qualification" class="btn">Education Qualification</a>
+<a href="#soft-skills" class="btn">Soft Skills</a>
+<a href="#certifications" class="btn">Certifications</a>
+<a href="#contact" class="btn">Contact</a>
+
   </div>
 </header>
 
-<section class="about">
+<section id="home">
+
   <h2>About Me</h2>
   <p>
     I am a passionate student learning modern web technologies like HTML, CSS, JavaScript and Java. 
@@ -141,7 +151,8 @@ and work on real-world projects.
 
   </p>
 </section>
-<section id="Area of interest">
+<section id="area-of-interest">
+
   <h2>Area of interest</h2>
   <div class="Area of interest">
     <div class="card">software developer</div><br><br>
@@ -158,6 +169,7 @@ and work on real-world projects.
 
 
 <section id="projects">
+
   <h2>Projects</h2>
   <div class="projects">
     <div class="card">Portfolio Website</div>
@@ -165,7 +177,8 @@ and work on real-world projects.
     <div class="card">gnanus drawing website</div>
   </div>
 </section>
-<section id="Achievements">
+<section id="achievements">
+
   <h2>Achievements</h2>
   <div class="Achievements">
     <div class="card">“In 2024, I received a 100% tuition fee waiver scholarship at Anna University, Chennai.”</div><br><br>
@@ -173,7 +186,9 @@ and work on real-world projects.
     <div class="card">"I won 3rd prize in a District-Level Drawing Competition in 2021 and received the award from the District Collector.”</div><br><br>
     
 </section>
-  <section>
+  <section id="skills">
+
+
   <h2>Tech Skills</h2>
   <div class="skills">
     <div class="card">HTML</div>
@@ -185,7 +200,8 @@ and work on real-world projects.
     <div class="card">c programming</div>
   </div>
   </section>
-<section id="Educational qualification ">
+<section id="education-qualification">
+
   <h2>Educational qualification </h2>
   <div class="Educational qualification "">
     <div class="card"> 2024-2028- B.E(computer science engineering),<br>
@@ -197,7 +213,8 @@ and work on real-world projects.
      M.P.L.higher secondary school,kumar nagar,tiruppur-641603.<br></div><br><br>
     
 </section>
-<section id="soft skills">
+<section id="soft-skills">
+
   <h2>soft skills</h2>
   <div class="soft skills">
     <div class="card">Good communication</div><br><br>
@@ -214,6 +231,7 @@ and work on real-world projects.
 
 
 <section id="certifications">
+
   <h2>Certifications</h2>
   <div class="projects">
     <div class="card"><img src="cci.jpeg" alt="Certificate 1" style="width:100%; border-radius:10px"></div>
@@ -232,7 +250,8 @@ and work on real-world projects.
   <h2>here by declared about information is true to the best of my knowledge and believe</h2>
 </section>
 
-<section>
+<section id="contact">
+
   <center>
   <h2>Contact:  6385222106</h2>
   <h3>Address:213/1b,perumal kovil street ,sirupooluvapatti,15 velampalayam ring road ,tiruppur-641603</h3>
@@ -256,6 +275,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
