--- a/index.html
+++ b/index.html
@@ -120,13 +120,10 @@
   </style>
 </head>
 <body>
-
-<header>
-  <div>
-    <img src="gnana.jpeg" alt="My Photo" class="profile-img">
-    <h1>Hi, I'm Gnanakannan 👋</h1>
-    <p>Web Developer | Java Learner | Student</p>
-    <a href="#home" class="btn">Home</a>
+  <header>
+    <div>
+    GNANAKANNAN  .   PORTFOLIO
+      <a href="#home" class="btn">Home</a>
 <a href="#area-of-interest" class="btn">Area of Interest</a>
 <a href="#skills" class="btn"> Tech Skills</a>
 <a href="#projects" class="btn">Projects</a>
@@ -136,6 +133,15 @@
 <a href="#certifications" class="btn">Certifications</a>
 <a href="#contact" class="btn">Contact</a>
 
+      </div>
+  </header>
+  <hr>
+<header>
+  <div>
+    <img src="gnana.jpeg" alt="My Photo" class="profile-img">
+    <h1>Hi, I'm Gnanakannan 👋</h1>
+    <p>Web Developer | Java Learner | Student</p>
+    
   </div>
 </header>
 
@@ -154,6 +160,7 @@ and work on real-world projects.
 <section id="area-of-interest">
 
   <h2>Area of interest</h2>
+  <p>“If you learn with interest, achievement comes naturally.”</p>
   <div class="Area of interest">
     <div class="card">software developer</div><br><br>
     <div class="card">java learning</div><br><br>
@@ -172,6 +179,7 @@ and work on real-world projects.
 
   <h2>Projects</h2>
   <div class="projects">
+    <p>“My interest is the driving force behind my skill development.”</p>
     <div class="card">Portfolio Website</div>
     <div class="card">gks acadamy website</div>
     <div class="card">gnanus drawing website</div>
@@ -275,6 +283,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
