--- a/index.html
+++ b/index.html
@@ -120,10 +120,17 @@
   </style>
 </head>
 <body>
-  <header>
-    <div>
-    GNANAKANNAN  .   PORTFOLIO</div> <br> <br> <br> <br>
-      <a href="#home" class="btn">Home</a>
+  <nav class="nav">
+    <div class="brand">GNANAKANNAN.PORTFOLIO</div>
+  </nav>
+  
+  <hr>
+<header>
+  <div>
+    <img src="gnana.jpeg" alt="My Photo" class="profile-img">
+    <h1>Hi, I'm Gnanakannan 👋</h1>
+    <p>Web Developer | Java Learner | Student</p>
+    <a href="#home" class="btn">Home</a>
 <a href="#area-of-interest" class="btn">Area of Interest</a>
 <a href="#skills" class="btn"> Tech Skills</a>
 <a href="#projects" class="btn">Projects</a>
@@ -132,15 +139,6 @@
 <a href="#soft-skills" class="btn">Soft Skills</a>
 <a href="#certifications" class="btn">Certifications</a>
 <a href="#contact" class="btn">Contact</a>
-
-      
-  </header>
-  <hr>
-<header>
-  <div>
-    <img src="gnana.jpeg" alt="My Photo" class="profile-img">
-    <h1>Hi, I'm Gnanakannan 👋</h1>
-    <p>Web Developer | Java Learner | Student</p>
     
   </div>
 </header>
@@ -283,6 +281,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
