--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  
 <header>
   <div>
-    <h1>GNANAKANNAN.PORTFOLIO</h1><br><br><hr><br><br>
+    <h1>GNANA.PORTFOLIO</h1><br><br><hr><br><br>
     <img src="gnana.jpeg" alt="My Photo" class="profile-img">
     <h1>Hi, I'm Gnanakannan 👋</h1>
     <p>Web Developer | Java Learner | Student</p>
@@ -279,6 +279,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
