--- a/index.html
+++ b/index.html
@@ -265,8 +265,9 @@ and work on real-world projects.
     <center>
     
 
-    <a href="https://www.instagram.com/">INSTAGRAM |</a>
-    <a href="https://www.youtube.com/@gnanakannank80">YOUTUBE</a>
+    <a href="https://www.instagram.com/king_devil_gnana_official/"class="btn">INSTAGRAM |</a>
+    <a href="https://www.youtube.com/@gnanakannank80"class="btn">YOUTUBE</a>
+       <a href="https://github.com/"class="btn">GITHUB</a>
     </center>
 </p>
 
@@ -279,6 +280,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
