--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@ and work on real-world projects.
   <h2>Contact:  6385222106</h2>
   <h3>Address:213/1b,perumal kovil street ,sirupooluvapatti,15 velampalayam ring road ,tiruppur-641603</h3>
   <p style="text-align:center">Email: gnanakannank80@gmail.com</p>
-  </center>
+  </center><BR><BR><BR>
   <p>
     <center>
     
 
-    <a href="https://www.instagram.com/king_devil_gnana_official/"class="btn">INSTAGRAM |</a>
-    <a href="https://www.youtube.com/@gnanakannank80"class="btn">YOUTUBE</a>
-       <a href="https://github.com/"class="btn">GITHUB</a>
+    <a href="https://www.instagram.com/king_devil_gnana_official/"class="btn">INSTAGRAM </a>
+    <a href="https://www.youtube.com/@gnanakannank80"class="btn">YOUTUBE </a>
+       <a href="https://github.com/"class="btn">GITHUB </a>
     </center>
 </p>
 
@@ -280,6 +280,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
