--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ and work on real-world projects.
 
     <a href="https://www.instagram.com/king_devil_gnana_official/"class="btn">🅾  𝐈𝐧𝐬𝐭𝐚𝐠𝐫𝐚𝐦 </a>
     <a href="https://www.youtube.com/@gnanakannank80"class="btn">▶ YouTube </a>
-       <a href="https://github.com/"class="btn">🐈‍⬛ GITHUB </a>
+       <a href="https://github.com/"class="btn">👾 GITHUB </a>
     </center>
 </p>
 
@@ -280,6 +280,7 @@ and work on real-world projects.
 
 </body>
 </html>
+
 
 
 
